--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>test.Customer.clickOnCustomersUnderDropDown</td></tr>
+<tr><td>test.Customer.clickOnCustomerRolesUnderDropDown</td></tr>
+<tr><td>test.Customer.clickOnCustomersDropDown</td></tr>
 </table>
