--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b959e">  <td>23/09/06 12:08:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:0, instance:test.Login@3542162a]">login</td> 
-  <td>main@369805307</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>23/09/06 12:08:11</td>   <td>-8227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:test.Login@3542162a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@369805307</td>   <td></td> </tr>
+<tr bgcolor="8b959e">  <td>23/09/06 13:11:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Customer.clickOnOnlineCustomers()[pri:0, instance:test.Customer@3c435123]">clickOnOnlineCustomers</td> 
+  <td>main@620423816</td>   <td></td> </tr>
+<tr bgcolor="67b0b6">  <td>23/09/06 13:11:49</td>   <td>-7241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:test.Customer@3c435123]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@620423816</td>   <td></td> </tr>
 </table>
