--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.Customer" class="method navigator-link" hash-for-method="clickOnOnlineCustomers">clickOnOnlineCustomers</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="test.Customer" class="method navigator-link" hash-for-method="clickOnGDPRRequest">clickOnGDPRRequest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickOnOnlineCustomers">
-                  </a> <!-- clickOnOnlineCustomers -->
-                  <span class="method-name">clickOnOnlineCustomers</span>
+                  <a name="clickOnGDPRRequest">
+                  </a> <!-- clickOnGDPRRequest -->
+                  <span class="method-name">clickOnGDPRRequest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse-1261176975/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse-285835219/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;test.Customer&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;clickOnOnlineCustomers&quot;/&gt;
+          &lt;include name=&quot;clickOnGDPRRequest&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- test.Customer --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickOnOnlineCustomers')
+data.setCell(0, 1, 'clickOnGDPRRequest')
 data.setCell(0, 2, 'test.Customer')
-data.setCell(0, 3, 1875);
+data.setCell(0, 3, 3012);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,17 +213,25 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">7 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">test.Customer</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">clickOnCustomersUnderDropDown</span>
+                <span class="ignored-method-name">clickOnCustomersDropDown</span>
                 <br/>
                 <span class="ignored-method-name">clickOnCustomerRolesUnderDropDown</span>
                 <br/>
-                <span class="ignored-method-name">clickOnCustomersDropDown</span>
+                <span class="ignored-method-name">clickOnVendors</span>
+                <br/>
+                <span class="ignored-method-name">clickOnCustomersUnderDropDown</span>
+                <br/>
+                <span class="ignored-method-name">clickOnActivityLog</span>
+                <br/>
+                <span class="ignored-method-name">clickOnOnlineCustomers</span>
+                <br/>
+                <span class="ignored-method-name">clickOnActivityTypes</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -241,8 +249,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">clickOnOnlineCustomers</span>
-                <span class="method-start">7244 ms</span>
+                <span class="method-name">clickOnGDPRRequest</span>
+                <span class="method-start">7972 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
