--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,5 +1,9 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>test.Customer.clickOnCustomersUnderDropDown</td></tr>
-<tr><td>test.Customer.clickOnCustomerRolesUnderDropDown</td></tr>
 <tr><td>test.Customer.clickOnCustomersDropDown</td></tr>
+<tr><td>test.Customer.clickOnCustomerRolesUnderDropDown</td></tr>
+<tr><td>test.Customer.clickOnVendors</td></tr>
+<tr><td>test.Customer.clickOnCustomersUnderDropDown</td></tr>
+<tr><td>test.Customer.clickOnActivityLog</td></tr>
+<tr><td>test.Customer.clickOnOnlineCustomers</td></tr>
+<tr><td>test.Customer.clickOnActivityTypes</td></tr>
 </table>
